--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
       <div id="buttons"></div>
     </div>
   </div>
+  
+    <div class="container">
+      <div class="row">
+        <div class="gifDisplay">
+        </div>
+      </div>
+    </div>
 
-  <div class="gifDisplay">
-  </div>
 
-  <div class="button start">button start</div>
+  <!-- <div class="button start">button start</div> -->
 
 
 
