--- a/index.html
+++ b/index.html
@@ -16,25 +16,55 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Giphy World</h1>
-      <p class="lead">Click on a button to populate the giphy. Click the giphy to see it move. Click it again to pause it.</p>
+      <p class="lead">Click on a button to populate the giphy. Click the giphy to see it move. Click it again to pause
+        it.</p>
       <hr class="my-4">
       <div id="buttons"></div>
+
+      <form>
+          <div class="float-md-right">
+            <div class="form-group">
+              <label for="giphyAdd">Add a Giphy</label>
+              <input type="email" class="form-control" id="giphyAdd" placeholder="Enter giphy">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+
+
+      
     </div>
   </div>
-  
-    <div class="container">
-      <div class="row">
-        <div class="gifDisplay">
-        </div>
+
+
+  <!-- <div class="row">
+    <div class="col-4-md">
+      <form>
+        <div class="float-md-right">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+      </form>
+    </div>
+  </div>
+  </div> -->
+
+
+  <div class="container">
+    <div class="row">
+      <div class="gifDisplay">
       </div>
     </div>
+  </div>
 
 
   <!-- <div class="button start">button start</div> -->
 
 
 
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
