--- a/index.html
+++ b/index.html
@@ -22,35 +22,16 @@
       <div id="buttons"></div>
 
       <form>
-          <div class="float-md-right">
-            <div class="form-group">
-              <label for="giphyAdd">Add a Giphy</label>
-              <input type="email" class="form-control" id="giphyAdd" placeholder="Enter giphy">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>
-
-
-      
-    </div>
-  </div>
-
-
-  <!-- <div class="row">
-    <div class="col-4-md">
-      <form>
         <div class="float-md-right">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label for="giphyAdd">Add a Giphy</label>
+            <input type="text" class="form-control" id="giphyAdd" placeholder="Enter giphy">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
+        </div>
       </form>
     </div>
   </div>
-  </div> -->
-
 
   <div class="container">
     <div class="row">
@@ -58,12 +39,6 @@
       </div>
     </div>
   </div>
-
-
-  <!-- <div class="button start">button start</div> -->
-
-
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
