--- a/index.html
+++ b/index.html
@@ -9,41 +9,55 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/header.css" />
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
-
-  <form>
-    <div class="float-md-right">
-      <div class="form-group" id="giphy-form">
-        <label for="giphyAdd">Add a Giphy</label>
-        <input type="text" class="form-control" id="giphy-input" placeholder="Enter giphy">
-        <button type="submit" id="find-giphy" class="btn btn-primary">Submit</button>
-      </div>
-    </div>
-  </form>
-
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Giphy World</h1>
-      <p class="lead">Click on a button to populate the giphy. Click the giphy to see it move. Click it again to pause
-        it.</p>
-      <hr class="my-4">
-      <div id="buttons"></div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10">
-        <div class="row gifDisplay">
+  <header>
+    <section class="header-content">
+      <h1 class="header-title js-animate-letters animate-fade-zoom">
+        <span>G</span>
+        <span>I</span>
+        <span>P</span>
+        <span>H</span>
+        <span>Y</span>
+        <span> </span>
+        <span>W</span>
+        <span>O</span>
+        <span>R</span>
+        <span>L</span>
+        <span>D</span>
+      </h1>
+      <form>
+        <div class="float-md-right">
+          <div class="form-group" id="giphy-form">
+            <label for="giphyAdd" style="color: white">Enter one word to create a button</label>
+            <input type="text" class="form-control" id="giphy-input" placeholder="Enter giphy">
+            <button type="submit" id="find-giphy" class="btn btn-primary">Submit</button>
+          </div>
         </div>
-        <div class="col-lg-2">
+      </form>
+
+      <div class="container">
+        <p class="instructions">Click on a button to populate the giphy. Click the giphy to see it move. Click it
+          again
+          to pause
+          it.</p>
+        <hr class="my-4">
+        <div id="buttons"></div>
+
+        <div class="row">
+          <div class="col-lg-10">
+            <div class="row gifDisplay">
+            </div>
+            <div class="col-lg-2">
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
+    </section>
+  </header>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
